# dragonfly

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONVENTIONS.md  Dragonfly-C.sln  Dragonfly.sln  LICENSE  LICENSE.txt  Main.hs  README.md  STYLING.md  dragonfly  dragonfly.cabal
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: msbuild.yml
Debugging/: Debugging.cxx  Debugging.ixx  Debugging.vcxproj  Debugging.vcxproj.filters
DflSYCL/: DflSYCL.cpp  DflSYCL.h  DflSYCL.vcxproj  DflSYCL.vcxproj.filters
Dragonfly/: DflWinRT.h  Dragonfly.Error.hxx  Dragonfly.Generics-Async.ixx  Dragonfly.Generics-MetaFunctions.ixx  Dragonfly.Generics.hxx  Dragonfly.Generics.ixx  Dragonfly.Graphics-Image.cpp  Dragonfly.Graphics-Image.cxx  Dragonfly.Graphics-Image.ixx  Dragonfly.Graphics-Space.cxx  Dragonfly.Graphics-Space.ixx  Dragonfly.Graphics.Renderer.cxx  Dragonfly.Graphics.Renderer.hxx  Dragonfly.Graphics.Renderer.ixx  Dragonfly.Graphics.ixx  Dragonfly.Hardware-Device.ixx  Dragonfly.Hardware-Memory.cpp  Dragonfly.Hardware-Memory.ixx  Dragonfly.Hardware-Monitor.cxx  Dragonfly.Hardware-Monitor.ixx  Dragonfly.Hardware-Session.cxx  Dragonfly.Hardware-Session.ixx  Dragonfly.Hardware.Device.hxx  Dragonfly.Hardware.Device.ixx  Dragonfly.Hardware.Memory.cxx  Dragonfly.Hardware.Memory.ixx  Dragonfly.Hardware.Session.cxx  Dragonfly.Hardware.Session.hxx  Dragonfly.Hardware.Session.ixx  Dragonfly.Hardware.ixx  Dragonfly.Harwdare-Device.cxx  Dragonfly.Harwdare.Device.cxx  Dragonfly.Memory.Block.cxx  Dragonfly.Memory.Block.hxx  Dragonfly.Memory.Block.ixx  Dragonfly.Memory.Buffer.cxx  Dragonfly.Memory.Buffer.hxx  Dragonfly.Memory.Buffer.ixx  Dragonfly.Memory.ixx  Dragonfly.Observer-Window.cxx  (+16 more)
Dragonfly-C/: Data.h  Dragonfly-C.vcxproj  Dragonfly-C.vcxproj.filters  Dragonfly.h  Internal.h  Main.c  StbDummy.h
Dragonfly-C/Control/: Memory.c  Threads.c
Dragonfly-C/Render/: Device.c  GLFW.c  GLFW.h  Image.c  Monitor.c  Session.c  Session.h  Vulkan.c  Vulkan.h  Window.c  Window.h
Dragonfly/Bind/: Render.hs
Dragonfly/Engine/: Render.hs
Dragonfly/Shaders/: TestFragShader.glsl  TestFragShader.hlsl  TestVertexShader.glsl  TestVertexShader.hlsl  test.spv  test_frag.spv
Dragonfly/c/include/: render.h  sets.h  vectors.h
Dragonfly/c/src/: render.c  sets.c  vectors.c
Testing/: Main.cpp  Testing.vcxproj  Testing.vcxproj.filters
UnitTesting/: Specialization.hpp  UnitTesting.cpp  UnitTesting.vcxproj  UnitTesting.vcxproj.filters
WinRT/: DflWinRT.h  Dragonfly.WinRT.hxx  WinRT.cpp  WinRT.vcxproj  WinRT.vcxproj.filters
c/include/: render.h  sets.h  vector.h
c/src/: render.c  sets.c  vector.c
